--- a/Backend/Wearemm/Catalog/Wearemm.Catalog.MigrationService/Wearemm.Catalog.MigrationService.csproj
+++ b/Backend/Wearemm/Catalog/Wearemm.Catalog.MigrationService/Wearemm.Catalog.MigrationService.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Aspire.Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.2.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.1" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
   </ItemGroup>
