--- a/Backend/Wearemm/Catalog/Wearemm.Catalog/Wearemm.Catalog.csproj
+++ b/Backend/Wearemm/Catalog/Wearemm.Catalog/Wearemm.Catalog.csproj
@@ -8,7 +8,7 @@
 
   <ItemGroup>
 	<PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.4" />
-	<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
+	<PackageReference Include="Aspire.Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.2.0" />
     <PackageReference Include="FluentValidation" Version="11.11.0" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.11.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.4">
